# sproqet-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: ndarray_pipeline.rs  tcp_echo.rs
src/: channel.rs  error.rs  fifo.rs  io_context.rs  lib.rs  link.rs  variant.rs  wire_protocol.rs
tests/: robustness.rs
